<resources>
    <string name="app_name">Fantasy Baseball</string>
    <string name="reset">reset</string>
    <string name="pitching">pitching</string>
    <string name="hitting">hitting</string>
    <string name="for_houston_astros">For Houston Astros</string>
    <string name="for_boston_red_sox">For Boston Red Sox</string>
    <string name="rule">Click on the Hitting/Pitching Button to set the scores for each team</string>
    <string name="total_score">Total Score</string>
    <string name="_0">0</string>
    <string name="houston_astros">Houston Astros</string>
    <string name="boston_red_sox">Boston Red Sox</string>
    <string name="back">back</string>
    <string name="total_hitting_is">Total Hitting is:</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="score_points">Score Points</string>
    <string name="caught_stealing">Caught Stealing</string>
    <string name="stolen_bases">Stolen Bases</string>
    <string name="hit_by_pitch">Hit By Pitch</string>
    <string name="walks">Walks</string>
    <string name="runs_batted_in">Runs Batted In</string>
    <string name="run">Run</string>
    <string name="home_runs">Home Runs</string>
    <string name="triples">Triples</string>
    <string name="doubles">doubles</string>
    <string name="singles">singles</string>
    <string name="games">Games</string>
    <string name="hitting_for_boston_red_sox">hitting for Boston Red Sox</string>
    <string name="hitting_for_houston_astros">hitting for Houston Astros</string>
    <string name="_11">-1</string>
    <string name="_5">5</string>
    <string name="_25">-25</string>
    <string name="_50">-50</string>
    <string name="_550">50</string>
    <string name="blown_save">Blown Save</string>
    <string name="hold">Hold</string>
    <string name="quality_start">Quality Start</string>
    <string name="strikeout">Strikeout</string>
    <string name="no_hitter">No Hitter</string>
    <string name="hit_batsmen">Hit Batsmen</string>
    <string name="earned_run">Earned Run</string>
    <string name="inning_pitched">Inning Pitched</string>
    <string name="save">Save</string>
    <string name="win">Win</string>
    <string name="pitching_for_houston_astros">Pitching for Houston Astros</string>
    <string name="pitching_for_boston_red_sox">Pitching for Boston Red Sox</string>
</resources>
