<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    tools:context=".Pitchers1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/pitching_for_boston_red_sox"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/games"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/win" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/save" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/inning_pitched" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/earned_run" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/hit_batsmen" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/no_hitter"
                    android:onClick="buttonClicked"/>

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/strikeout"
                    android:onClick="buttonClicked"/>

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/quality_start"
                    android:onClick="buttonClicked"/>

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/hold"
                    android:onClick="buttonClicked"/>
                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/blown_save"
                    android:onClick="buttonClicked"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_points"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/win1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/_4"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_550"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_50"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="7dp"/>

                <TextView
                    android:id="@+id/hitbat1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_25"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="11dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/hold1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="11dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/blow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_11"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"/>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/total2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_below="@id/text2"
            android:layout_marginRight="90dp"
            android:text="@string/_0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_hitting_is"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mybutton"
            android:layout_below="@id/text2"
            android:layout_marginTop="35dp"
            android:onClick="back2"
            android:text="@string/back" />


    </RelativeLayout>
</ScrollView>