<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Hitters2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/hitting_for_houston_astros"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/tes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tes1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/games"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/singles" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/doubles" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/triples" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/home_runs" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/run" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/runs_batted_in" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/walks" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/hit_by_pitch" />

                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:onClick="buttonClicked"
                    android:text="@string/stolen_bases" />
                <Button
                    android:textColor="#000000"
                    android:layout_width="130dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:text="@string/caught_stealing"
                    android:onClick="buttonClicked"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_points"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/singles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/doubles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/triples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_3"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/homeRun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_4"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="7dp"/>

                <TextView
                    android:id="@+id/run"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/runsBattedIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="11dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/walks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/hitByPitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/stolenBases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="11dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/caught"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="10dp"/>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_0"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/tes2"
            android:layout_alignParentRight="true"
            android:layout_marginRight= "90dp"
            android:id="@+id/total3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            android:textSize="15sp"
            android:layout_below="@id/tes2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mybutton"
            android:layout_below="@id/tes2"
            android:layout_marginTop="35dp"
            android:onClick="back3"
            android:text="@string/back" />


    </RelativeLayout>
</ScrollView>